# Physical-AI-and-Humanoid-Robotics-textbook

./: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
.claude/: config.json  settings.local.json
.claude/agents/: README.md  openai-agent-sdk.md  practical-examples.md  skills-and-tools.md
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
.specify/memory/: constitution.md
backend/: .env.example  README.md  demo.py  ingest_content.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  server_output.txt  simple_ingest.py  test_agent.py  test_agent_basic.py  test_agent_standalone.py  test_retrieval.py
backend/src/: main.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/rag_agent/: agent.py  config.py  models.py  retrieval.py  tools.py
docs/: docusaurus.config.js  index.md  package-lock.json  package.json  sidebars.js
docs/.claude/: settings.local.json
docs/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
docs/appendices/: appendix-a-installation.md  appendix-b-setup.md  appendix-c-troubleshooting.md  appendix-e-code-templates.md  appendix-g-resources.md
docs/ch01-introduction/: index.md
docs/ch02-fundamentals/: index.md
docs/ch03-ros2-architecture/: index.md
docs/ch04-gazebo-simulation/: index.md
docs/ch05-isaac-platform/: index.md
specs/1-rag-agent/: plan.md  (+5 more)
(+3617 files in other folders)
